deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  namespace: sample
spec:
  selector:
    matchLabels:
      app: sample
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: 002784619873.dkr.ecr.us-east-2.amazonaws.com/sample:latest
        ports:
        - containerPort: 80
