service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
  namespace: sample
spec:
  selector: 
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
