ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: sample-ingress
 namespace: sample
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: sample.jagadha.online
   http:
     paths:
     - path:
       backend:
         serviceName: sample-svc
         servicePort: 80
